Get rid of List.of().